--- a/style.css
+++ b/style.css
@@ -767,38 +767,56 @@ footer .final img {
         margin-bottom: 30px;
     }
 
-    .menu-expansivel {
-        width: 300px;
+    footer .menu-expansivel {
+        width: auto;
     }
     
-    .menu-item {
-        background-color: #f9f9f9;
-        border: 1px solid #ddd;
-        margin-bottom: 5px;
+    footer .menu-item {
+        background-color: #f5f5f5;
+        border-bottom: 1px solid #ccc;
         cursor: pointer;
         transition: background-color 0.3s;
+        
     }
     
-    .menu-item h3 {
+    footer .menu-item .titulo-menu-item {
         margin: 0;
-        padding: 15px;
         display: flex;
-        justify-content: space-between;
-        font-size: 18px;
+        height: 49px;
+        align-items: center;
+        padding: 0px 70px;
+    }
+
+    footer .menu-item .titulo-menu-item h3 {
+        font-family: var(--fonte-principal);
+        color: #000;
+        text-transform: uppercase;
+        font-size: 15px;
+        font-weight: bold;
+        width: auto;
+        flex: 1;
+        height: auto;
+        text-align: center;
+    }
+
+    footer .menu-item .titulo-menu-item i {
+        font-size: 10px;
+        width: auto;
+        height: auto;
     }
     
-    .menu-item .content {
+    footer .menu-item .conteudo-menu-item {
         display: none;
         padding: 15px;
         background-color: #fff;
         border-top: 1px solid #ddd;
     }
     
-    .menu-item.active .content {
+    footer  .menu-item.active .conteudo-menu-item {
         display: block;
     }
     
-    .menu-item:hover {
+    footer .menu-item:hover {
         background-color: #eee;
     }
 
