--- a/style.css
+++ b/style.css
@@ -170,14 +170,14 @@ header {
 
 
 /* Carrosel*/
- .carrosel {
+.carrosel {
     position: relative;
     width: 100%;
     overflow: hidden;
     display: block;
 }
 
- .carrosel-banners {
+.carrosel-banners {
     display: flex;
     transition: transform 0.5s ease;
 }
@@ -192,7 +192,7 @@ header {
     display: block;
 }
 
- .controles-banners {
+.controles-banners {
     position: absolute;
     bottom: 9%;
     display: flex;
@@ -276,19 +276,72 @@ main .BannerMcDaniel {
 }
 
 main .imagemDesktop-bannerDuplo {
-    display: block; 
+    display: block;
 }
 
 main .imagemMobile-bannerDuplo {
-    display: none; 
+    display: none;
 }
 
 main .bannerSneakersDesktop {
-    display: flex; 
- }
+    display: flex;
+}
 
 main .bannerSneakersMobile {
-   display: none; 
+    display: none;
+}
+
+/* banner Lacoste */
+
+main .bannerLacosteDesktop {
+    display: block;
+    position: relative;
+    min-width: 100%;
+    overflow: hidden;
+}
+
+main .bannerLacosteMobile {
+    display: none;
+}
+
+main .bannerLacosteDesktop img {
+    width: 100%;
+    max-height: 624px;
+}
+
+/* banner Marcas */
+
+main .bannerMarcas {
+    height: 130px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+/* Categorias */
+
+main .categorias {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    padding: 0px 120px;
+}
+
+main .categorias .tituloCategorias {
+    display: flex;
+    justify-content: space-between;
+}
+
+main .categorias .linhaCategorias {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+main .categorias .linhaCategorias .categoria {
+    display: flex;
+    flex-direction: column;
 }
 
 /* //////////////////////// Footer //////////////////////////////// */
@@ -353,7 +406,7 @@ footer .newsletter form input {
     padding: 0px 15px 14px 15px;
 }
 
-footer .newsletter form input#Email{
+footer .newsletter form input#Email {
     margin-top: 39px;
     margin-bottom: 17px;
 }
@@ -390,7 +443,7 @@ footer .newsletter form .checkbox .caixinha span {
     border: 2px solid #DDD;
 }
 
-footer .newsletter form .checkbox .caixinha input:checked + span {
+footer .newsletter form .checkbox .caixinha input:checked+span {
     background-color: #fff;
 }
 
@@ -483,7 +536,9 @@ footer .informacoes-desktop .dados-Frequentes .linksIcons {
     margin-left: 10px;
 }
 
-#link01, #link02, #link03 {
+#link01,
+#link02,
+#link03 {
     margin-bottom: 18px;
     margin-top: 8px;
 }
@@ -669,38 +724,68 @@ footer .final img {
         max-height: max-content;
         flex-direction: column;
     }
-    
+
     main .imagens-bannerDuplo {
         max-width: 960px;
         flex: 1px;
         max-height: 323px;
     }
-    
+
     main .imagens-bannerDuplo img {
         width: 100%;
         height: 100%;
         max-width: 960px;
     }
-    
+
     main .BannerMcDaniel {
         margin-top: 100px;
     }
 
-
     main .imagemDesktop-bannerDuplo {
-        display: none; 
+        display: none;
     }
-    
+
     main .imagemMobile-bannerDuplo {
-        display: block; 
+        display: block;
     }
 
     main .bannerSneakersDesktop {
-        display: none; 
-     }
-    
+        display: none;
+    }
+
     main .bannerSneakersMobile {
-       display: block; 
+        display: block;
+    }
+
+    /* banner Lacoste */
+
+    main .bannerLacosteDesktop {
+        display: none;
+    }
+
+    main .bannerLacosteMobile {
+        display: block;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    /* banner Marcas */
+
+    main .bannerMarcas {
+        height: 130px;
+        width: auto;
+        width: 100%;
+        overflow-x: auto;
+        white-space: nowrap;
+        display: flex;
+        justify-content: start;
+    }
+
+    main .bannerMarcas img {
+        width: 1200px;
+        max-width: none;
+
     }
 
 
@@ -709,8 +794,8 @@ footer .final img {
     footer .tatuape {
         padding: 20px 50px 40px 50px;
     }
-    
-    
+
+
     footer .newsletter form input {
         width: -webkit-fill-available;
         max-width: 624px;
@@ -726,12 +811,13 @@ footer .final img {
         display: none;
     }
 
-    footer .informacoes-mobile{
+    footer .informacoes-mobile {
         display: block;
     }
 
     footer .final {
-        display: none;;
+        display: none;
+        ;
     }
 
     footer .informacoes-mobile .formasPagamento {
@@ -770,15 +856,15 @@ footer .final img {
     footer .menu-expansivel {
         width: auto;
     }
-    
+
     footer .menu-item {
         background-color: #f5f5f5;
         border-bottom: 1px solid #ccc;
         cursor: pointer;
         transition: background-color 0.3s;
-        
+
     }
-    
+
     footer .menu-item .titulo-menu-item {
         margin: 0;
         display: flex;
@@ -804,18 +890,18 @@ footer .final img {
         width: auto;
         height: auto;
     }
-    
+
     footer .menu-item .conteudo-menu-item {
         display: none;
         padding: 15px;
         background-color: #fff;
         border-top: 1px solid #ddd;
     }
-    
-    footer  .menu-item.active .conteudo-menu-item {
+
+    footer .menu-item.active .conteudo-menu-item {
         display: block;
     }
-    
+
     footer .menu-item:hover {
         background-color: #eee;
     }
